--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -73,8 +73,6 @@
           <ng-container *ngIf="currentLanguage === 'en'">
             <p>
               {{ "text" | translate }} <br /><br />
-              <span class="TitleBold">ChatBet</span>
-              {{ "thankstoiatwo" | translate }}
             </p>
           </ng-container>
         </div>
@@ -200,20 +198,14 @@
     <div class="third-flex">
       <div class="text">
         <p>
-          <span class="TitleBold">Más de 150,000 jugadores</span> activos y
-          jugando
+          <span class="TitleBold">{{"mascientocincuenta" | translate}}</span> {{"activos" | translate}}
         </p>
-        <h1>¿Por que Deberias integrar Chat Bet?</h1>
+        <h1>{{"porquedeberias" | translate}}</h1>
         <div class="texto">
           <p>
-            Con ChatBet, retener jugadores nunca ha sido tan fácil. Nuestra IA
-            personaliza cada apuesta, creando experiencias únicas que mantienen
-            a los usuarios comprometidos y aumentan tu crecimiento.<br /><br />
+            {{"conchatbet" | translate}}.<br /><br />
 
-            Optimiza el turnover, atrae nuevos apostadores y mejora la
-            retención, todo mientras maximizas el valor de cada apuesta. Además,
-            gestiona operaciones en múltiples canales de manera ágil y segura,
-            adaptada a cada jugador.<br /><br />
+            {{"optimiza" | translate}}<br /><br />
           </p>
         </div>
       </div>
@@ -233,32 +225,26 @@
     <div class="third-flex">
       <div class="text">
         <p>
-          <span class="TitleBold">Entiende, guia y mejora</span> la experiencia
-          de apuestas
+          <span class="TitleBold">{{"entiendeyguia" | translate}}</span> {{"laexperiencia" | translate}}
         </p>
-        <h1>Depósitos y Retiros Seguros en Fiat o Cripto.</h1>
+        <h1>{{"depositos" | translate}}</h1>
         <div class="texto">
           <p>
-            Con ChatBet, tus usuarios pueden realizar depósitos y retiros de
-            forma segura en monedas locales o criptomonedas a través de
-            cualquier canal instalado, como WhatsApp o Telegram. Todas las
-            transacciones se procesan de manera segura y sin necesidad de salir
-            del chat, garantizando una experiencia fluida y sin
-            complicaciones.<br /><br />
+            {{"optimiza" | translate}}tususuarios<br /><br />
           </p>
         </div>
         <div class="botones">
-          <button ><span class="TitleBold3">Casino: Jugadas inteligentes</span></button>
-          <button ><span class="TitleBold3">Soporte: Respuestas instantáneas.</span></button>
-          <button ><span class="TitleBold3">Sugerencias de Juego: Recomendaciones basadas en datos.</span></button><br>
-          <button ><span class="TitleBold3">Soporte: Respuestas instantáneas.</span></button><br>
+          <button ><span class="TitleBold3">{{"casinos" | translate}}</span></button>
+          <button ><span class="TitleBold3">{{"soporte" | translate}}</span></button>
+          <button ><span class="TitleBold3">{{"sugerencias" | translate}}</span></button><br>
+          <button ><span class="TitleBold3">{{"soporterespuestas" | translate}}</span></button><br>
           <div class="division">
             <button ><span class="TitleBold3">Open AI</span></button>
             <button><span class="TitleBold3">CloudFlrare</span></button>
-            <button><span class="TitleBold3">Promociones</span></button>
+            <button><span class="TitleBold3">{{"promociones" | translate}}</span></button>
           </div>
-          <button ><span class="TitleBold3">Ofertas personalizadas</span></button><br>
-          <button ><span class="TitleBold3">Noticias: Eventos clave en tiempo real</span></button>
+          <button ><span class="TitleBold3">{{"ofertas" | translate}}</span></button><br>
+          <button ><span class="TitleBold3">{{"noticias" | translate}}</span></button>
         </div>
       </div>
 
@@ -277,28 +263,22 @@
         <img src="../../../../assets/img/Frame5.png" alt="" />
       </div>
       <div class="text">
-        <h1>Apuestas Sin Complicaciones para tus Usuarios—Todo en un Chat</h1>
+        <h1>{{ "sincomplicaciones" | translate }}</h1>
         <div class="texto">
           <p>
-            Con ChatBet, tus usuarios apuestan tan fácil como enviar un mensaje.
-            Sin navegar sitios ni registros largos, todo ocurre en una sola
-            conversación.<br /><br />
+            {{ "tususuariosapuestan" | translate }}<br /><br />
             <span class="TitleBold3"
-              >Tus usuarios hacen sus apuestas en segundos</span
+              >{{ "tususuarioshacen" | translate }}</span
             ><br />
-            En lugar de buscar, simplemente escriben en el chat la apuesta que
-            desean hacer.<br /><br />
-            <span class="TitleBold3">Ingresan el monto a apostar</span><br />
-            Tus usuarios solo indican cuánto quieren apostar y están listos.<br /><br />
+            {{ "enlugar" | translate }}<br /><br />
+            <span class="TitleBold3">{{ "ingresan" | translate }}</span><br />
+            {{ "soloindican" | translate }}<br /><br />
             <span class="TitleBold3"
-              >Confirman y la apuesta se realiza al instante 🤑</span
+              >{{ "confirman" | translate }}</span
             ><br />
-            Un mensaje rápido de confirmación, y la apuesta está activa—sin
-            retrasos ni complicaciones.
+            {{ "unmensajerapido" | translate }}
             <br /><br />
-            Este proceso fluido mantiene a los usuarios comprometidos,
-            ofreciendo una experiencia rápida y sin fricciones en su plataforma
-            de mensajería favorita.
+            {{ "esproceso" | translate }}
           </p>
         </div>
 
@@ -330,14 +310,12 @@
         <img src="../../../../assets/img/Frame6.png" alt="" />
       </div>
       <div class="text">
-        <span class="TitleBold2">Protección de primer nivel</span>
-        <h1>La plataforma segura que tu negocio necesita.</h1>
+        <span class="TitleBold2">{{ "proteccion" | translate }}</span>
+        <h1>{{ "laplataforma" | translate }}</h1>
 
         <div class="texto">
           <p>
-            La seguridad es esencial en nuestra plataforma. Con AWS, PCI DSS,
-            y ISO 27001, garantizamos operaciones protegidas y datos seguros,
-            cumpliendo con los más altos estándares de la industria.
+            {{ "segura" | translate }}
           </p>
         </div>
       </div>
@@ -348,7 +326,7 @@
 <div id="contactanos" class="section">
   <div class="sixth-section">
     <div class="text">
-      <span class="TitleBold2">¡Únase a la emoción! </span>
+      <span class="TitleBold2">{{ "unanse" | translate }}</span>
       <h1>{{ "Listopara" | translate }}</h1>
       <h3>
         <span class="TitleBoldMobile">{{ "Únase" | translate }} </span>
