--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -410,6 +410,16 @@ h3{
                 margin-top: 27px;
             }
         }
+
+        .animation-container{
+           
+            .lottie-animation{
+                width: 100%;
+                height: auto;
+                object-fit: cover;
+                margin-top: 24px;
+            }
+        }
         
     }
 
