--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -557,6 +557,11 @@ h3{
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                margin-left: 5.8rem;
+                @media (max-width: 900px){
+                    margin-left: 3.2rem;
+                    
+                }
             }
 
         }
