--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -225,35 +225,31 @@
           <p>{{ "optimiza" | translate }}tususuarios<br /><br /></p>
         </div>
         <div class="botones">
-          <button>
+         
             <span class="TitleBold3">{{ "casinos" | translate }}</span>
-          </button>
-          <button>
+       
+        
             <span class="TitleBold3">{{ "soporte" | translate }}</span>
-          </button>
-          <button>
+       
             <span class="TitleBold3">{{
               "sugerencias" | translate
-            }}</span></button
-          ><br />
-          <button>
+            }}</span><br />
+         
             <span class="TitleBold3">{{
               "soporterespuestas" | translate
-            }}</span></button
-          ><br />
+            }}</span><br />
           <div class="division">
-            <button><span class="TitleBold3">Open AI</span></button>
-            <button><span class="TitleBold3">CloudFlrare</span></button>
-            <button>
+            <span class="TitleBold3">Open AI</span>
+            <span class="TitleBold3">CloudFlrare</span>
+            
               <span class="TitleBold3">{{ "promociones" | translate }}</span>
-            </button>
+            
           </div>
-          <button>
-            <span class="TitleBold3">{{ "ofertas" | translate }}</span></button
-          ><br />
-          <button>
+          
+            <span class="TitleBold3">{{ "ofertas" | translate }}</span><br />
+          
             <span class="TitleBold3">{{ "noticias" | translate }}</span>
-          </button>
+          
         </div>
       </div>
 
