--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -71,7 +71,7 @@ p{
         @media (max-width:900px){
             height: 80%;
             width: 80%;
-            
+            transform: scale(1); 
         }
         transform: scale(1.2); 
         object-fit: contain; 
@@ -84,8 +84,8 @@ h1{
     margin-top: 24px;
     margin-bottom: 0;
     @media (max-width: 900px){
-        font-size: 1rem;
-        width: 70%;
+        font-size: 1.8rem;
+        width: 100%;
     }
 }
 h3{
@@ -560,7 +560,7 @@ h3{
                 object-fit: cover;
                 margin-left: 5.8rem;
                 @media (max-width: 900px){
-                    margin-left: 3.2rem;
+                    margin-left: 2.5rem;
                     
                 }
             }
