--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -51,7 +51,7 @@
 
     <div class="first-section-container">
       <div class="text">
-        <img src="../../../../assets/img/Frame8.png" alt="" />
+        <!-- <img src="../../../../assets/img/Frame8.png" alt="" /> -->
         <div class="animation-container">
           <ng-lottie
             *ngIf="currentLanguage === 'es'; else otherOptions"
