--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -412,9 +412,21 @@ h3{
     /* Second Section */
     .second-flex{
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
         align-items: center;
         width: 100%;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        margin-bottom: 0;
+
+        p{
+          
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
         /* margin-top: -70px; */
         
         @media (max-width: 900px) {
@@ -426,6 +438,7 @@ h3{
             font-family: 'Poppins', sans-serif;
             color: black;
             width: 60%;
+            
             @media screen and (max-width: 900px){
                 width: 100%;
             }
@@ -438,6 +451,7 @@ h3{
             display: flex;
             align-items: center;
             margin-top: 3rem;
+            
 
             img{
                 width: 5px;
