--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -85,7 +85,7 @@
 
       <div class="image-first-container">
         <img
-          src="../../../../assets/img/Frame1.png "
+          [src]="currentImages['img5']"
           alt=""
           style="margin-top: 0"
         />
@@ -264,7 +264,7 @@
   <div class="third-section">
     <div class="third-flex">
       <div class="image-section" style="display: flex">
-        <img src="../../../../assets/img/Frame5.png" alt="" />
+        <img [src]="currentImages['third']" alt="" />
       </div>
       <div class="text">
         <h1>{{ "sincomplicaciones" | translate }}</h1>
