--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -421,6 +421,10 @@ h3{
         text-align: center;
         margin-bottom: 0;
 
+        h1{
+            margin-top: 4rem;
+        }
+
         p{
           
             align-items: center;
@@ -462,7 +466,7 @@ h3{
             p{
                 margin: 0;
                 transition: opacity 0.5s;
-                margin-top: 24px;
+                margin-top: -10px;
             }
 
             p.active {
