--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -43,7 +43,7 @@
   <div class="first-section">
     <div class="gif2">
       <img
-        src="../../../../assets/img/Frame1.png"
+        src="../../../../assets/img/phone-tlf.png"
         alt=""
         style="margin-top: 0"
       />
