--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -220,12 +220,15 @@ h3{
             }
             .gif2{
                 position: relative;
+                display: flex;
                 margin-top: 4rem;
+                align-items: center;
+                justify-content: center;
                 img{
-                    width: 100%;
+                    width: 50%;
                     height: auto;
-                     object-fit: cover;  
-                     margin-bottom: -110px     
+                     object-fit: contain;  
+                     /* margin-bottom: -110px      */
                 }
 
 
