--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -396,10 +396,10 @@
 
 <div class="backgroundline">
   <div class="fotter1">
-    <img src="../../../../assets/Background/footer.png " alt="" />
+    <img [src]="currentImages['footer']" alt="" />
   </div>
 
   <div class="fotter2">
-    <img src="../../../../assets/Background/2footer.png " alt="" />
+    <img [src]="currentImages['footer2'] " alt="" />
   </div>
 </div>
