--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -15,7 +15,11 @@
         <a href="#contactanos">{{ "headerfive" | translate }}</a>
         <span class="divisor">|</span>
         <div class="idioma">
-          <img
+          <a href="
+          "(click)="switchLanguage('en')">Eng</a>
+          <a href="
+          "(click)="switchLanguage('es')">Esp</a>
+          <!-- <img
             [src]="
               currentLanguage === 'en'
                 ? '../../../../assets/img/us-on.svg'
@@ -24,8 +28,8 @@
             alt=""
             class="us"
             (click)="switchLanguage('en')"
-          />
-          <img
+          /> -->
+          <!-- <img
             [src]="
               currentLanguage === 'es'
                 ? '../../../../assets/img/esp-on.png'
@@ -34,7 +38,7 @@
             alt=""
             class="esp"
             (click)="switchLanguage('es')"
-          />
+          /> -->
         </div>
       </div>
     </div>
